fix(location): Location serialization with 0 worlds